--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Osnovno o Linuxu</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" href="Linux-Logo.png" type="image/x-icon">
+  <link rel="icon" href="linux.png" type="image/x-icon">
 </head>
 <body>
   <header>
