--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
           <ul>
             <li>
               <h3>Ubuntu</h3>
-              <p>Ubuntu je jedna od najpopularnijih Linux distribucija koja se fokusira na jednostavnost korišćenja i pružanje stabilnog i sigurnog operativnog sistema. Za više informacija, posetite <a href="https://ubuntu.com">zvanični sajt Ubuntu-a</a>.</p>
+              <p>Ubuntu je jedna od najpopularnijih Linux distribucija koja se fokusira na jednostavnost korišćenja i pružanje stabilnog i sigurnog operativnog sistema. Za više informacija, posetite <a href="https://ubuntu.com" target="_blank">zvanični sajt Ubuntu-a</a>.</p>
             </li>
             <li>
               <h3>Fedora</h3>
-              <p>Fedora je napredna Linux distribucija koja je poznata po svojoj tehnološkoj inovativnosti i podršci najnovijim tehnologijama. Za više informacija, posetite <a href="https://getfedora.org">zvanični sajt Fedore</a>.</p>
+              <p>Fedora je napredna Linux distribucija koja je poznata po svojoj tehnološkoj inovativnosti i podršci najnovijim tehnologijama. Za više informacija, posetite <a href="https://getfedora.org" target="_blank">zvanični sajt Fedore</a>.</p>
             </li>
             <li>
               <h3>Debian</h3>
-              <p>Debian je jedna od najstarijih i najuticajnijih Linux distribucija koja je poznata po svojoj stabilnosti, sigurnosti i ogromnoj bazi softvera. Za više informacija, posetite <a href="https://www.debian.org">zvanični sajt Debiana</a>.</p>
+              <p>Debian je jedna od najstarijih i najuticajnijih Linux distribucija koja je poznata po svojoj stabilnosti, sigurnosti i ogromnoj bazi softvera. Za više informacija, posetite <a href="https://www.debian.org" target="_blank">zvanični sajt Debiana</a>.</p>
             </li>
             <li>
               <h3>CentOS</h3>
-              <p>CentOS je besplatan klon komercijalne distribucije Red Hat Enterprise Linux (RHEL) i pruža dugoročnu stabilnost i podršku. Za više informacija, posetite <a href="https://www.centos.org">zvanični sajt CentOS-a</a>.</p>
+              <p>CentOS je besplatan klon komercijalne distribucije Red Hat Enterprise Linux (RHEL) i pruža dugoročnu stabilnost i podršku. Za više informacija, posetite <a href="https://www.centos.org" target="_blank">zvanični sajt CentOS-a</a>.</p>
             </li>
           </ul>
           <p>Naravno, ovo su samo neke od mnogih distribucija Linuxa koje su dostupne, i svaka ima svoje jedinstvene karakteristike i primene.</p>
@@ -149,7 +149,7 @@
             <li><em>Velika zajednica korisnika i razvojnih timova</em></li>
           </ul>
           <img src="desktop.jpg" alt="elementaryOS" style="max-width: 1024px; max-height: 512px;" class="image">
-          <p>Za više informacija o elementary OS distribuciji, posetite <a href="https://elementary.io">zvanični sajt elementary OS-a</a>.</p>
+          <p>Za više informacija o elementary OS distribuciji, posetite <a href="https://elementary.io" target="_blank">zvanični sajt elementary OS-a</a>.</p>
         </section>
 
       </main>
