--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="linux.png" type="image/x-icon">
   <style>
     a {
-      color: magenta;
+      color: goldenrod;
     }
   </style>
 </head>
