--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       color: goldenrod;
     }
   </style>
+  
+  <style>
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <header>
