--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
       color: goldenrod;
     }
   </style>
+
+  <style>
+    a {
+      text-decoration: none;
+    }
+  </style>
   
   <style>
     a:hover {
       text-decoration: underline;
+      text-decoration-thickness: 2px;
     }
   </style>
 </head>
