--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     a:hover {
       text-decoration: underline;
       text-decoration-thickness: 2px;
+      color: yellowgreen;
     }
   </style>
 </head>
