--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </main>
 
   <footer>
-    <p class="footer-text">&copy; 2023 Osnovno o Linuxu. Sva prava zadržana.</p>
+    <p class="footer-text">&copy; 2023 Osnovno o Linuxu. Sva prava zadržana. vnsgzX</p>
   </footer>
 
   <script>
