--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     const originalColor = header.style.backgroundColor;
   
     header.addEventListener('click', function() {
-      header.style.backgroundColor = 'red';
+      header.style.backgroundColor = 'goldenrod';
   
       setTimeout(function() {
         header.style.backgroundColor = originalColor;
