--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sr">
 <head>
+  <meta name="google-site-verification" content="_0FyQxI-LCYXJj-GGbue4ZF8D70GXDJClWMVEk__yt8" />
   <meta charset="UTF-8">
   <title>Osnovno o Linuxu</title>
   <link rel="stylesheet" type="text/css" href="style.css">
